--- a/app/assets/stylesheets/partials/_user.scss
+++ b/app/assets/stylesheets/partials/_user.scss
@@ -1,19 +1,3 @@
-/* common */
-li{
-  list-style: none;
-}
-.text-center{
-  text-align: center;
-}
-.text-right{
-  text-align: right;
-}
-
-.btn-celestino-user {
-  text-transform: uppercase;
-  margin-left: 100px;
-  margin-top: 35px;
-}
 
 /* user */
 
